--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </div>
 
 <section>
-    <div class="container">
+    <div class="container" id="learn-more-anchor">
 
         <div class="row">
             <div class="col-lg-8 col-xs-12 mt-5 mb-5">
@@ -97,7 +97,7 @@
                 <div class="sectionSub">
                     <div class="sectionSubImg"><img src="images/sec1.01.png" alt="..." /></div>
                     <h4 class="sectionSubHead">Owned by you</h4>
-                    <p class="sectionSubDesc">Picnic is an insurance mutual with no shareholders and owned by its members. So you come first every time.</p>
+                    <p class="sectionSubDesc">Picnic is an insurance mutual with no shareholders. You are our Owners, so you come first every time.</p>
                 </div>
             </div>
             
@@ -142,21 +142,21 @@
                         <div class="sectionSub">
                             <h2 class="sectionNum">01</h2>
                             <h4 class="sectionSubHead">POOL PREMIUMS</h4>
-                            <p class="sectionSubDesc">When you join the collective, your premium is added to a pool of funds drawn from all members.</p>
+                            <p class="sectionSubDesc">When you join Picnic as an Owner, your premium is added to the collective pool.</p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="sectionSub">
                             <h2 class="sectionNum">02</h2>
                             <h4 class="sectionSubHead">HAVE YOUR SAY</h4>
-                            <p class="sectionSubDesc">As a member of the collective you can vote on paying tricky claims.</p>
+                            <p class="sectionSubDesc">As an owner of Picnic you get to voice your opinion on paying tricky claims.</p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="sectionSub">
                             <h2 class="sectionNum">03</h2>
                             <h4 class="sectionSubHead">PAY CLAIMS</h4>
-                            <p class="sectionSubDesc">The pool pays for claims and costs, with a small reserve secured.</p>
+                            <p class="sectionSubDesc">The pool pays for claims and costs, protecting the collective.</p>
                         </div>
                     </div>
 
@@ -195,7 +195,7 @@
 
         <div class="container">
 
-            <h3 class="sectionHead white mb-5">Fair insurance, better insurance</h3>
+            <h3 class="sectionHead white mb-5">Simple, fair and transparent insurance</h3>
 
             <div class="row">
 
@@ -205,19 +205,19 @@
                     <div class="sectionSub">
                         <div class="sectionSubImg"><img src="images/sec3.01.png" alt="..." /></div>
                         <h4 class="sectionSubHead">YOU COME FIRST</h4>
-                        <p class="sectionSubDesc">Our policyholders are shareholders, so we pursue fair outcomes that benefit members and the collective.</p>
+                        <p class="sectionSubDesc">Our policyholders are Owners, so we pursue fair outcomes that benefit you in the collective.</p>
                         <!-- <a href="" class="sectionMore">Read More</a> -->
                     </div>
                     <div class="sectionSub">
-                        <div class="sectionSubImg"><img src="images/sec3.04.png" alt="..." /></div>
-                        <h4 class="sectionSubHead">MOTOR, HOME & CONTENTS</h4>
-                        <p class="sectionSubDesc">We insure your most important assets, starting with motor, home and contents insurance. And as we grow we'll be extending Picnic's savings to new insurance products too.</p>
+                        <div class="sectionSubImg"><img src="images/sec3.03.png" alt="..." /></div>
+                        <h4 class="sectionSubHead">SIMPLE & FAIR POLICIES</h4>
+                        <p class="sectionSubDesc">We fight against fine print and loopholes that complicate claims.  Our insurance is simple, with fewer exclusions and clearer coverage. Picnic’s peer-reviewed claims ensure that fairness prevails.</p>
 <!--                             <a href="" class="sectionMore">Read More</a> -->
                     </div>
                     <div class="sectionSub">
                         <div class="sectionSubImg"><img src="images/sec3.02.png" alt="..." /></div>
                         <h4 class="sectionSubHead">TRANSPARENCY</h4>
-                        <p class="sectionSubDesc">You’ll know what condition the collective is in, with access to information like claim payout rates, satisfaction levels and member volumes.</p>
+                        <p class="sectionSubDesc">You’ll know what condition the collective is in, with access to information like claim payout rates, satisfaction levels and Owner volumes.</p>
 <!--                             <a href="" class="sectionMore">Read More</a> -->
                     </div>
                 </div>
@@ -226,9 +226,9 @@
 
                 <div class="col-lg-5 offset-lg-1 col-md-6 pt-5">
                     <div class="sectionSub">
-                        <div class="sectionSubImg"><img src="images/sec3.03.png" alt="..." /></div>
-                        <h4 class="sectionSubHead">SIMPLE & FAIR CLAIMS</h4>
-                        <p class="sectionSubDesc">We fight against fine print and loopholes that complicate claims.  Our insurance is simple, with fewer exclusions and clearer coverage. Picnic’s peer-reviewed claims ensure that fairness prevails.</p>
+                        <div class="sectionSubImg"><img src="images/sec3.04.png" alt="..." /></div>
+                        <h4 class="sectionSubHead">MOTOR, HOME & CONTENTS</h4>
+                        <p class="sectionSubDesc">We insure your most important assets, starting with motor, home and contents insurance. And as we grow we'll be extending Picnic's savings to new insurance products too.</p>
 <!--                             <a href="" class="sectionMore">Read More</a> -->
                     </div>
                     <div class="sectionSub">
@@ -240,7 +240,7 @@
                     <div class="sectionSub">
                         <div class="sectionSubImg"><img src="images/sec3.06.png" alt="..." /></div>
                         <h4 class="sectionSubHead">STRONG & STABLE</h4>
-                        <p class="sectionSubDesc">To protect our members, Picnic reserves a small amount of capital from pooled premiums. Building the strength of our collective, to cover claims big and small.</p>
+                        <p class="sectionSubDesc">To protect Owners, Picnic will be a regulated insurance mutual and will reserve sufficient capital to cover claims big and small.</p>
 <!--                             <a href="" class="sectionMore">Read More</a> -->
                     </div>
                 </div>
@@ -335,6 +335,22 @@
 
         <div class="section-5-slide">
             <div class="section-5-slideImg">
+                <img src="images/Gina.jpg" class="team-photo" alt="..." />
+                <span></span>
+            </div>
+            <h4 class="section-5-slideName">Gina Lednyak</h4>
+            <h4 class="section-5-slideTitle light">Social Media Management</h4>
+<!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
+            <div class="section-5-slideSocial">
+                <ul>
+                    <li><a href="https://au.linkedin.com/in/ginalednyak"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
+       <!--              <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
+                </ul>
+            </div>
+        </div>
+
+        <div class="section-5-slide">
+            <div class="section-5-slideImg">
                 <img src="images/Reece.jpg" class="team-photo" alt="..." />
                 <span></span>
             </div>
@@ -344,6 +360,22 @@
             <div class="section-5-slideSocial">
                 <ul>
                     <li><a href="https://www.linkedin.com/in/reece-frazier-88721628/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
+                    <!-- <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
+                </ul>
+            </div>
+        </div>
+
+        <div class="section-5-slide">
+            <div class="section-5-slideImg">
+                <img src="images/Lindsay.jpg" class="team-photo" alt="..." />
+                <span></span>
+            </div>
+            <h4 class="section-5-slideName">Lindsay Rogers</h4>
+            <h4 class="section-5-slideTitle light">Brand Development</h4>
+<!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
+            <div class="section-5-slideSocial">
+                <ul>
+                    <li><a href="https://au.linkedin.com/in/lindzrogers" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
                     <!-- <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
