--- a/roadmap.html
+++ b/roadmap.html
@@ -196,8 +196,8 @@
                     <span>2018</span>
                     <p>Q4</p>
                 </div>
-                <h3 class="roadmapTimelineHead">AUSTRALIAN OPERATIONS TEAM MOBILISED</h3>
-                <p class="sectionSubDesc">Operations infrastructure mobilised and teams recruited, trained and readied for delivering an exceptional customer experience.</p>
+                <h3 class="roadmapTimelineHead">MOBLISE AUSTRALIAN OPERATIONS TEAM</h3>
+                <p class="sectionSubDesc">Mobilise operations infrastructure and team recruitment and training for delivering an exceptional customer experience.</p>
             </div>
 
             <div class="roadmapTimelineSlide">
@@ -205,17 +205,17 @@
                     <span>2018</span>
                     <p>Q4</p>
                 </div>
-                <h3 class="roadmapTimelineHead">TECHNOLOGY COMPLETED & TESTED</h3>
-                <p class="sectionSubDesc">Picnic’s insurance policy administration and management systems developed, tested and deployed. This is the template for multiple international markets.</p>
+                <h3 class="roadmapTimelineHead">COMPLETE TECHNOLOGY DEVELOPMENT</h3>
+                <p class="sectionSubDesc">Picnic’s insurance policy administration and management systems are complete, with testing and deployment. This is the template for multiple international markets.</p>
             </div>
 
             <div class="roadmapTimelineSlide">
                 <div class="roadmapTimelineDate">
                     <span>2019</span>
-                    <p>Q1</p>
+                    <p>FIRST HALF</p>
                 </div>
-                <h3 class="roadmapTimelineHead">AUSTRALIA LICENSED & LAUNCHED</h3>
-                <p class="sectionSubDesc">Insurance mutual licence granted by the regulator to enable consumers around Australia to benefit from collective insurance with heart.</p>
+                <h3 class="roadmapTimelineHead">LICENSING AND LAUNCHING AUSTRALIA</h3>
+                <p class="sectionSubDesc">Regulator grants insurance mutual licence, enabling consumers around Australia to benefit from collective insurance with heart.</p>
             </div>
 
             <div class="roadmapTimelineSlide">
@@ -223,8 +223,8 @@
                     <span>2019</span>
                     <p>ONGOING</p>
                 </div>
-                <h3 class="roadmapTimelineHead">ROLLING & STAGGERED MARKET EXPANSION</h3>
-                <p class="sectionSubDesc">Picnic rolling launches will be based on the support received in the security token offer. Launches will be staggered to minimise pressure on operating markets and ensure continuity of superb customer experience.</p>
+                <h3 class="roadmapTimelineHead">ROLLING MARKET EXPANSION</h3>
+                <p class="sectionSubDesc">Picnic rolling launches will be based on the support received in the security token offer. Timed successive launches minimise pressure on operating markets and ensure continuity of superb customer experience.</p>
             </div>
 
         </div>
