--- a/team.html
+++ b/team.html
@@ -171,6 +171,22 @@
 
         <div class="section-5-slide">
             <div class="section-5-slideImg">
+                <img src="images/Gina.jpg" class="team-photo" alt="..." />
+                <span></span>
+            </div>
+            <h4 class="section-5-slideName">Gina Lednyak</h4>
+            <h4 class="section-5-slideTitle light">Social Media Management</h4>
+<!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
+            <div class="section-5-slideSocial">
+                <ul>
+                    <li><a href="https://au.linkedin.com/in/ginalednyak"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
+       <!--              <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
+                </ul>
+            </div>
+        </div>
+
+        <div class="section-5-slide">
+            <div class="section-5-slideImg">
                 <img src="images/Reece.jpg" class="team-photo" alt="..." />
                 <span></span>
             </div>
@@ -180,6 +196,22 @@
             <div class="section-5-slideSocial">
                 <ul>
                     <li><a href="https://www.linkedin.com/in/reece-frazier-88721628/" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
+                    <!-- <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
+                </ul>
+            </div>
+        </div>
+
+        <div class="section-5-slide">
+            <div class="section-5-slideImg">
+                <img src="images/Lindsay.jpg" class="team-photo" alt="..." />
+                <span></span>
+            </div>
+            <h4 class="section-5-slideName">Lindsay Rogers</h4>
+            <h4 class="section-5-slideTitle light">Brand Development</h4>
+<!--             <h4 class="section-5-slideDesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4> -->
+            <div class="section-5-slideSocial">
+                <ul>
+                    <li><a href="https://au.linkedin.com/in/lindzrogers" target="_blank"><i class="fa fa-linkedin-square hover_ease_2" aria-hidden="true"></i></a></li>
                     <!-- <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
@@ -277,7 +309,8 @@
 <div class="teamChatWrap white">
     <div class="sectionContainer">
     <div class="keepUpdated white">
-        <h3 class="sectionHead mb-5">Keep Updated</h3>
+        <h3 class="sectionHead mb-3">Keep Updated</h3>
+        <h4 class="sectionSubHead mb-5">Join the Picnic and subscribe for upcoming job openings</h4>
         <form>
             <div class="row">
                 <div class="col-md-8">
@@ -356,11 +389,6 @@
 
 <script type="text/javascript" src="js/bootstrap.min.js" ></script>
 <script type="text/javascript" src="js/custom.js"></script>
-
-
-
-                
-
 
 </body>
 </html>
